<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/logbg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginpage"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:src="@drawable/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/loginuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginpage"
        android:background="@drawable/apasare"
        android:padding="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/nume_utilizator"
        android:inputType="text"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_200"
        android:textSize="17sp"
        android:textStyle="bold"
        android:autofillHints="" />
    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginuser"
        android:background="@drawable/apasare"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/purple_200"
        android:textSize="17sp"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearlayoutlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginpassword">


    <com.rey.material.widget.CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Material.Drawable.CheckBox"
        android:text="@string/salveaza_parola"
        android:textColor="@color/purple_700"
        app:cbd_strokeColor="@color/purple_700"
        android:textStyle="bold|italic"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:layout_marginStart="17dp"/>

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_uitat_parola"
        android:textColor="#720E8E"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="100dp"
        />

    </LinearLayout>
    <Button
        android:id="@+id/loginpagebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/butoane"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/log_in"
        />

    <TextView
        android:id="@+id/Admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:text="@string/admin"
        android:textColor="@color/purple_200"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

</RelativeLayout>