<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg1"
    tools:context=".MainActivity">

<ImageView
    android:id="@+id/logos"
    android:layout_width="400dp"
    android:layout_height="250dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="0dp"
    android:src="@drawable/title"
    android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="cursive"
        android:text="@string/cine_a_spus_ca_banii_nu_pot_cumpara_fericirea_nu_a_stiut_unde_sa_faca_cumparaturile"
        android:textAlignment="center"
        android:textColor="#370540"
        android:textSize="30sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/loginbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/butoane"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/ai_deja_cont_log_in"
        />

    <Button
        android:id="@+id/registerbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/loginbt"
        android:layout_marginBottom="95dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/apasare"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/inregistreaza_te"
        />


</RelativeLayout>